# MirrorMuse

./: .gitignore  README.md  pyproject.toml  rag.py
application/crawlers/: base.py  custom_article.py  github.py  linkedin.py  medium.py
application/networks/: embeddings.py
application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
application/preprocessing/operations/: chunking.py
application/rag/: __init__.py  base.py  query_expanison.py  reranking.py  retriever.py  self_query.py
application/utils/: misc.py  split_user_full_name.py
configs/: digital_data_etl.yml  feature_engineering.yaml
data/data_warehouse_raw_data/: ArticleDocument.json  UserDocument.json
domain/: __init__.py  chunks.py  embedded_chunks.py  queries.py
domain/base/: nosql.py  vector.py
infrastructure/: inference_pipeline_api.py  opik_utils.py
infrastructure/aws/deploy/: delete_sagemaker_endpoint.py
infrastructure/db/: mongo.py  qdrant.py
model/: utils.py
model/inference/: inference.py  run.py
notebooks/: infopt.ipynb
notebooks/Data Cleaning_Upload/: 01. Clean_data.ipynb  02. Generate Prefrence_data.ipynb
notebooks/Training/: 01. sft-training.ipynb  02. dpo-training.ipynb  03. eval-01.ipynb
pipelines/: digital_data_etl.py
script/: 01. clean_data.py  02. create_preference_data.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tools/: data_warehouse.py  ml_service.py  run.py  streamlit_app.py
(+5 files in other folders)
